--- a/project3/css/style.css
+++ b/project3/css/style.css
@@ -39,8 +39,8 @@ img {
 /* === CLEARFIX === */
 .clearfix:after{
   clear: both;
-  content: ".";
   display: block;
+  content:" ";
   width: 0px;
   height: 0px;
 }
@@ -205,35 +205,40 @@ img {
 
   .navbar {
     background-color: #556270;
-    font-size: 12.5px;
     padding-left: 5%;
     padding-right: 5%;
-
+    width: 100%;
   }
   
   .nav-link, .nav-link:hover {
     color: white;
   } 
 
+  .nav-item-right {
+    margin: 0px 0px;
+
+  }
+
+  .nav-item-left {
+    margin: 0px 8px;
+  }
+
+
   .nav-left {
     padding: 0px;
     width: 36%;
-    display: flex;
-    float: left;
   }
 
   .nav-right {
     padding: 0px;
-    width: 36%;
+    width: 54%;
   }
 
   .nav-menu {
         display:inline-flex;
-        position: fixed;
-        left: -100%;
         flex-direction: column;
         background-color: #fff;
-        width: 100%;
+        width: 100% !important;
         border-radius: 10px;
         text-align: center;
         transition: 0.3s;
@@ -254,11 +259,19 @@ img {
     font-weight: bolder;
     left: 3vw !important;
     top: 4vw !important;
-    bottom: 3vw
+    bottom: 3vw;
+    position: absolute;
+    line-height: 45px;
+    display: block;
   }
 
   .bannerText>h1 {
     font-family: "Lato", sans-serif;
+    font-size: 10vw;
+  }
+
+  .bannerText>p {
+    font-size: 3vw;
   }
 }
 
