--- a/project3/css/login.css
+++ b/project3/css/login.css
@@ -46,7 +46,7 @@ html, body{
     border-radius: 2px;
 }
 .form .heading{
-    color: #000;/
+    color: #000;
     font-size: 25px;
     margin: 0px 0 0px;
     height: 30px;
