--- a/kakascorner/css/style2.css
+++ b/kakascorner/css/style2.css
@@ -1,4 +1,6 @@
-*{box-sizing: border-box; -webkit-box-sizing: border-box; }
+
+
+*{box-sizing: border-box; -webkit-box-sizing: border-box; scroll-behavior: smooth;}
 html, body { height: 100%; }
 body { margin: 0; font: 16px/1.3 sans-serif; }
 
