--- a/kakascorner/css/style2.css
+++ b/kakascorner/css/style2.css
@@ -1,18 +1,44 @@
 
+/*--------------------------------------------------------------
+# General
+--------------------------------------------------------------*/
+:root {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  color: #444444;
+}
+
+a {
+  color: #ea0429;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ec2143;
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Nunito", sans-serif;
+}
+
 
 *{box-sizing: border-box; -webkit-box-sizing: border-box; scroll-behavior: smooth;}
 html, body { height: 100%; }
 body { margin: 0; font: 16px/1.3 sans-serif; }
 
-/*
-PURE RESPONSIVE CSS3 SLIDESHOW GALLERY by Roko C. buljan
-http://stackoverflow.com/a/34696029/383904
-*/
+  
+/*--------------------------------------------------------------
+# Slideshow
+--------------------------------------------------------------*/
 
 .CSSgal {
 	position: relative;
 	overflow: hidden;
-	height: 100%; /* Or set a fixed height */
+	height: 100%; 
 }
 
 /* SLIDER */
@@ -48,7 +74,7 @@ http://stackoverflow.com/a/34696029/383904
 }
 
 .CSSgal .prevNext > div+div {
-	visibility: hidden; /* Hide all but first P/N container */
+	visibility: hidden;
 }
 
 .CSSgal .prevNext a {
@@ -56,7 +82,7 @@ http://stackoverflow.com/a/34696029/383904
 	position: absolute;
 	width:       60px;
 	height:      60px;
-	line-height: 60px; /* If you want to place numbers */
+	line-height: 60px; 
 	text-align: center;
 	opacity: 0.7;
 	-webkit-transition: 0.3s;
@@ -129,12 +155,6 @@ http://stackoverflow.com/a/34696029/383904
 #s4:target ~ .slider {transform: translateX(-300%); -webkit-transform: translateX(-300%);}
 /* More slides? Add here more rules */
 
-
-/* YOU'RE THE DESIGNER! 
-   ____________________
-   All above was mainly to get it working :)
-   CSSgal CUSTOM STYLES / OVERRIDES HERE: */
-
 .CSSgal{
 	color: #fff;	
 	text-align: center;
@@ -170,31 +190,6 @@ http://stackoverflow.com/a/34696029/383904
 }
 
 
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
-:root {
-    scroll-behavior: smooth;
-  }
-  
-  body {
-    font-family: "Open Sans", sans-serif;
-    color: #444444;
-  }
-  
-  a {
-    color: #ea0429;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: #ec2143;
-    text-decoration: none;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    font-family: "Nunito", sans-serif;
-  }
   
 /*--------------------------------------------------------------
 # Sections
