--- a/kakascorner/css/style2.css
+++ b/kakascorner/css/style2.css
@@ -168,6 +168,7 @@ body { margin: 0; font: 16px/1.3 sans-serif; }
 	font-size: 3em;
   color: #ea0429;
   font-family: 'Mate SC', serif;
+  letter-spacing: 17px;
 }
 
 .CSSgal .slider h2 {
